# cmake-pdb

./: CMakeLists.txt  README.txt  test.cpp
exe/: CMakeLists.txt
lib/: CMakeLists.txt  lib1.cpp  lib2.cpp
lib1/: CMakeLists.txt
lib2/: CMakeLists.txt
